--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,5 @@ python:
   - "3.7"
   - "3.9"
 install: "pip install -r requirement.txt"
-script:
-  - python joke.py
-  - python unittest_api.py
+script: coverage run unittest_api.py
+after_success: <(curl -s https://codecov.io/bash)
